--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.5.8",
     "survey-angular": "^1.0.15",
+    "surveyjs-editor": "^1.0.15",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
