--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.0",
     "angular-in-memory-web-api": "^0.5.4",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "rxjs": "^5.5.8",
     "survey-angular": "^1.0.15",
     "surveyjs-editor": "^1.0.15",
