--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --prod && node server.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -23,9 +23,13 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.0",
     "angular-in-memory-web-api": "^0.5.4",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "mongoose": "^5.0.13",
+    "npm": "^5.8.0",
     "rxjs": "^5.5.8",
     "survey-angular": "^1.0.15",
     "surveyjs-editor": "^1.0.15",
